# handcrafted_marketplace

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
handcrafted_marketplace/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  tests.py  urls.py  views.py
products/templates/products/: product_detail.html  product_list.html
staticfiles/: staticfiles.json
templates/: base.html
users/: models.py
